fixed some errors